# spliff

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  ISSUES.md  Makefile  README.md  SPECS.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLAUDE.md  CODE-MAP.md  DESIGN-tui-mode.md  EDR_XDR_ROADMAP.md  HTTP3_QUIC_IMPLEMENTATION_PLAN.md  PLAN-unified-v095.md  RESEARCH_ANALYSIS.md  SHARED_POOL_ARCHITECTURE.md  TROUBLESHOOTING.md  XDP_INTEGRATION_PLAN.md
include/: CLAUDE.md  sslsniff.h
src/: CLAUDE.md  main.c
src/bpf/: CLAUDE.md  binary_scanner.c  binary_scanner.h  boringssl_offsets.h  bpf_loader.c  bpf_loader.h  probe_handler.c  probe_handler.h  spliff.bpf.c  sslsniff.bpf.c  vmlinux.h
src/content/: CLAUDE.md  decompressor.c  decompressor.h  signatures.c  signatures.h
src/correlation/: flow_cache.c  flow_cache.h  flow_context.c  flow_context.h
src/include/: spliff.h  sslsniff.h
src/output/: CLAUDE.md  display.c  display.h
src/protocol/: CLAUDE.md  detector.c  detector.h  http1.c  http1.h  http2.c  http2.h  websocket.c  websocket.h
src/threading/: dispatcher.c  manager.c  output.c  pool.c  state.c  threading.h  worker.c
src/util/: CLAUDE.md  safe_str.c  safe_str.h
tests/: CLAUDE.md  test_common.c  test_http1.c  test_http2.c  test_xdp.c
